now can detect if app runs under Rosetta 2 and detect Mac's architecture

--- a/macOS ToolBox/en.lproj/Localizable.strings
+++ b/macOS ToolBox/en.lproj/Localizable.strings
@@ -333,3 +333,7 @@
 "year.string" = " year";
 
 "more.string" = "More";
+
+"arm.string" = "Apple Silicon";
+"intel.string" = "Intel";
+"rosetta.string" = "Apple Silicon (Rosetta 2)";
