--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -312,6 +312,7 @@
 "macOSUpdate.string" = "Обновления macOS";
 "sysUpdateNoInternet.string" = "Нет соединения c сервером обновлений. Проверьте соединение и повторите попытку";
 "sysUpdateCheck.string" = "Проверить наличие обновлений macOS";
+"otherUpdate.string" = "Доступно обновление для системного ПО";
 
 "cachesClear.reason" = "очистить пользовательский кеш";
 "NODISKACCESS" = "Для очистки кешей приложению необходим полный доступ к диску.";
@@ -335,3 +336,8 @@
 
 "more.string" = "Подробнее";
 
+"therm.nominal" = "Тепловая нагрузка: номинальная";
+"therm.fair" = "Тепловая нагрузка: выше средней";
+"therm.serious" = "Тепловая нагрузка: высокая";
+"therm.critical" = "Тепловая нагрузка: перегрев";
+"therm.unknown" = "Тепловая нагрузка: неизвестно";
