--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -140,6 +140,7 @@
 "anim.settings" = "Настройки анимаций";
 "batteryAnimation.string" = "Анимации батареи на главном экрне";
 "showSerialNumber.string" = "Не размывать серийный номер";
+"isInMenuBar.string" = "Запускать в строке меню";
 
 "ultrafast.string" = "Очень быстро";
 "fast.string"= "Быстро";
