implemented launch at login

--- a/macOS ToolBox/en.lproj/Localizable.strings
+++ b/macOS ToolBox/en.lproj/Localizable.strings
@@ -345,3 +345,5 @@
 "therm.serious" = "Thermal Pressure: serious";
 "therm.critical" = "Thermal Pressure: overheating";
 "therm.unknown" = "Thermal Pressure: unknown";
+
+"autoLaunch.string" = "Запускать при входе";
