--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -341,3 +341,5 @@
 "therm.serious" = "Тепловая нагрузка: высокая";
 "therm.critical" = "Тепловая нагрузка: перегрев";
 "therm.unknown" = "Тепловая нагрузка: неизвестно";
+
+"autoLaunch.string" = "Запускать при входе";
