--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -189,6 +189,7 @@
 "hibernationWithPoweroff.string" = "Сон с выключением питания";
 "undefined.string" = "Неопределено";
 "clicktoquit.string" = "Нажмите, чтобы выйти или нажмите \"esc\"";
+"clicktohide.string" = "Нажмите, чтобы скрыть или нажмите \"esc\"";
 "ramStatus.string" = "Статус RAM";
 "diskLabel.string" = "Имя диска";
 "createDisk.string" = "Создать диск";
