new ui: on long press on clock app quits (different behaviour in app modes (menubar/desktop))

--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -189,7 +189,7 @@
 "hibernationWithPoweroff.string" = "Сон с выключением питания";
 "undefined.string" = "Неопределено";
 "clicktoquit.string" = "Нажмите, чтобы выйти или нажмите \"esc\"";
-"clicktohide.string" = "Нажмите, чтобы скрыть или нажмите \"esc\"";
+"clicktohide.string" = "⎋ / ⬉ для скрытия\nудежрание для выхода";
 "ramStatus.string" = "Статус RAM";
 "diskLabel.string" = "Имя диска";
 "createDisk.string" = "Создать диск";
