--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -196,6 +196,7 @@
 "gig.string" = "ГБ";
 "tib.string" = "ТБ";
 "mib.string" = "МБ";
+"capacity.string" = "ёмкость";
 "ramDiskVolume.string" = "Объём диска";
 "clearRAM.string" = "Очистить RAM";
 "noRAM.string" = "Слишком мало памяти для создания диска.\nПопробуйте закрыть лишние приложения\nи/или очистить память с помощью кнопки\nсправа-снизу.";
