now waiting for Apple to implement grid items autospan done with ui for now, preparing HT

--- a/macOS ToolBox/en.lproj/Localizable.strings
+++ b/macOS ToolBox/en.lproj/Localizable.strings
@@ -159,7 +159,7 @@
 "disable.string" = "Disable";
 
 "clear.button" = "Clear";
-"userCaches.string" = "User cache";
+"userCaches.string" = "Cached";
 
 "packer.title" = "I'll pack selected application to .pkg installer for you";
 "pwdTitle.text" = "Enter password:";
