--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -115,6 +115,7 @@
 "tid.title" = "TouchID по всей macOS";
 "done.title" = "TouchID активирован.";
 "done.disabled.title" = "TouchID деактивирован.";
+"noTouchIDInstalled.string" = "Похоже, что TouchID не установлен в Вашем Mac.";
 "status.title" = "Статус:";
 "switch.button" = "Переключить";
 "cancel.button" = "Отмена";
