--- a/macOS ToolBox/ru.lproj/Localizable.strings
+++ b/macOS ToolBox/ru.lproj/Localizable.strings
@@ -151,9 +151,9 @@
 
 "defaults.string" = "По умолчанию";
 "WARNING.STRING" = "ВНИМАНИЕ";
-"warning.details.string" = "Эти три кнопки СБРОСЯТ ВАШИ настройки к \"заводским\". Чтобы изменения вступили в силу мультитул перезапустится.";
+"warning.details.string" = "Эта кнопка СБРОСИТ ВАШИ настройки (в приложении) к \"заводским\". Чтобы изменения вступили в силу мультитул перезапустится.";
 "parallels.default" = "Эта кнопка вернёт значение настройки к папке Parllels, расположенной в домашней директории";
-"all.default" = "СТРЕТЕТЬ ВСЁ\nИДЕНТИФИКАТОР ДЛЯ ПОДПИСИ ПАКЕТОВ\nПАРОЛЬ ПОЛЬЗОВАТЕЛЯ\nРАБОЧИЕ ПАПКИ PARALLELS И UTM";
+"all.default" = "СТРЕТЕТЬ ВСЁ";
 "UTM.default" = "Эта кнопка вернёт значение настройки к папке UTM, расположенной в папке контейнеров в библиотеке ";
 
 "enable.string" = "Включить";
@@ -346,3 +346,6 @@
 "therm.unknown" = "Тепловая нагрузка: неизвестно";
 
 "autoLaunch.string" = "Запускать при входе";
+
+"creationDate" = "Дата создания";
+"lastAccessDate" = "Дата открытия";
