check if isARM and ui improvements

--- a/xCore/en.lproj/Localizable.strings
+++ b/xCore/en.lproj/Localizable.strings
@@ -327,6 +327,7 @@
 "system.string" = "System";
 "load.string" = "Load";
 
+"processor.string" = "CPU";
 "chip.string" = "Chip";
 "memory.string" = "Memory";
 "macOS.string" = "macOS Version";
