--- a/xCore/ru.lproj/Localizable.strings
+++ b/xCore/ru.lproj/Localizable.strings
@@ -317,6 +317,8 @@
 "otherUpdate.string" = "Доступно обновление для системного ПО";
 
 "cachesClear.reason" = "очистить пользовательский кеш";
+"snapshots.string" = "Снимков";
+"clearTM.string" = "Очистить снимки";
 "NODISKACCESS" = "Для очистки кешей приложению необходим полный доступ к диску.";
 "openDiskAccessPrefPane.string" = "Открыть настройки доступа";
 "justForCaches.string" = "Разрешение нужно только для очистки кешей. Никакие другие данные не будут затронуты.";
