ui changes for macOS with security response

--- a/xCore/en.lproj/Localizable.strings
+++ b/xCore/en.lproj/Localizable.strings
@@ -355,3 +355,4 @@
 
 "creationDate" = "Creation date";
 "lastAccessDate" = "Last access date";
+"secResponse.string" = "Security Response Version";
