--- a/xCore/en.lproj/Localizable.strings
+++ b/xCore/en.lproj/Localizable.strings
@@ -362,3 +362,9 @@
 "lastAccessDate" = "Last access date";
 "secResponse.string" = "Security Response Version";
 "buttonActionDelayEnabled.string" = "Delay for main screen action buttons";
+
+"wired.string" = "Wired";
+"wireless.string" = "Wi-Fi";
+"vpn.string" = "VPN";
+"cellular.string" = "Cellular";
+"disconnected.string" = "Offline";
